@@ -18,7 +18,10 @@ Version 1.3.16+svn:
     * Added the option to use a resolution of 800x480 when using
       --enable-small-gui at configure time. This is especially usefull for
       devices like the eeePC or other handheld devices.
-    * Various tunings about the transparency of hp/xp bars
+    * Improved editor theme so that it works as intended in 800x600.
+    * Increase available space for the terrain list in the map editor by
+      rearanging items.
+    * Various tunings about the transparency of hp/xp bars.
 
 Version 1.3.16:
   * Language and translations
