@@ -19,6 +19,8 @@ Version 1.3.16+svn:
    * add support for 800x480 when using the configure option
      --enable-small-gui, not everything displays correctly (preferences,
      mp-creation/lobby, ...), but normal gameplay should work perfectly
+   * improved editor theme so that it works in 800x600, too
+   * increase space for terrains in the mapeditor by rearanging items a little
    * quick replays no longer scroll to leaders
    * scrolling to the leader the very first time happens instantly now
    * Various tunings about the transparency of hp/xp bars (avoid confusion like
